--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
@@ -28,12 +28,25 @@
         android:layout_height="match_parent"
         android:orientation="vertical" />
 
-    <LinearLayout
-        android:id="@+id/llCallContainer"
+    <FrameLayout
+        android:id="@+id/layoutCall"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:visibility="gone"/>
+        android:layout_height="match_parent">
+
+        <io.agora.scene.showTo1v1.ui.view.CallDraggableView
+            android:id="@+id/vDragWindow1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"/>
+
+        <io.agora.scene.showTo1v1.ui.view.CallDraggableView
+            android:id="@+id/vDragWindow2"
+            android:layout_width="@dimen/show_to1v1_drag_view_width"
+            android:layout_height="@dimen/show_to1v1_drag_view_height"
+            android:layout_gravity="end"
+            android:layout_marginTop="126dp"
+            android:layout_marginEnd="25dp" />
+    </FrameLayout>
 
 <!--    头部-->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -203,19 +216,6 @@
         android:src="@drawable/show_to1v1_room_detail_setting"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <io.agora.scene.showTo1v1.ui.view.CallDraggableView
-            android:id="@+id/vDragWindow"
-            android:layout_width="109dp"
-            android:layout_height="163dp"
-            android:layout_gravity="end"
-            android:layout_marginTop="110dp"
-            android:layout_marginEnd="20dp" />
-    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/flDashboard"
