--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_draggable_view.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_draggable_view.xml
@@ -4,17 +4,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
+        android:id="@+id/llContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="20dp">
-        <LinearLayout
-            android:id="@+id/llContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
-    </androidx.cardview.widget.CardView>
+        android:orientation="vertical"
+        android:background="@drawable/show_to1v1_draggable_view_radius"
+        />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvUserName"
@@ -23,7 +19,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
         android:textColor="@color/white"
-        android:textSize="12dp"
+        android:textSize="12sp"
         android:text="000000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
