--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_create_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_create_activity.xml
@@ -62,6 +62,11 @@
             android:gravity="center_vertical"
             android:hint="@string/show_to1v1_room_name_hint"
             android:textSize="14sp"
+            android:maxEms="24"
+            android:maxLength="24"
+            android:singleLine="true"
+            android:lines="1"
+            android:maxLines="1"
             android:paddingHorizontal="20dp"
             app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
