--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
@@ -22,7 +22,7 @@
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/layoutTop" />
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/llVideoContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
