[FIX] some bugs

--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_detail_activity.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_detail_activity.xml
@@ -77,7 +77,7 @@
         android:textSize="10dp"
         android:text="000000"
         app:layout_constraintBottom_toBottomOf="@+id/cvRoomInfo"
-        app:layout_constraintStart_toStartOf="@+id/tvRoomName"
+        app:layout_constraintStart_toStartOf="@+id/tvRoomTitle"
         />
     
     <androidx.appcompat.widget.AppCompatImageView
