--- a/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_control_view.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_control_view.xml
@@ -7,12 +7,6 @@
     tools:layout_height="500dp"
     tools:theme="@style/Theme.MaterialComponents.Light">
 
-    <include
-        android:id="@+id/ilIdle"
-        layout="@layout/cantata_layout_lrc_idle"
-        android:visibility="visible"
-        tools:visibility="visible" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clActive"
         android:layout_width="match_parent"
@@ -59,7 +53,7 @@
 
         <include
             layout="@layout/cantata_layout_lrc_prepare"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <include
             android:id="@+id/ilActive"
@@ -72,4 +66,10 @@
             android:visibility="gone"
             tools:visibility="visible" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <include
+        android:id="@+id/ilIdle"
+        layout="@layout/cantata_layout_lrc_idle"
+        android:visibility="visible"
+        tools:visibility="gone" />
 </FrameLayout>
