--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
@@ -335,4 +335,10 @@
             android:textSize="14sp" />
     </LinearLayout>
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/groupHangup"
+        app:constraint_referenced_ids="ivHangup,tvHangup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
