fixbugs refresh ui

--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
@@ -22,11 +22,15 @@
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/layoutTop" />
 
-    <FrameLayout
-        android:id="@+id/llVideoContainer"
+<!--    <FrameLayout-->
+<!--        android:id="@+id/llVideoContainer"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:orientation="vertical" />-->
+    <TextureView
+        android:id="@+id/textureVideo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" />
+        android:layout_height="match_parent"/>
 
     <FrameLayout
         android:id="@+id/layoutCall"
