--- a/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_control_view.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_control_view.xml
@@ -4,15 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:layout_height="500dp"
+    android:background="@drawable/cantata_mv_bg"
     tools:theme="@style/Theme.MaterialComponents.Light">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clActive"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:background="@drawable/cantata_mv_bg"
         tools:visibility="visible">
+
+        <!-- prepare -->
+        <include
+            layout="@layout/cantata_layout_lrc_prepare"
+            tools:visibility="gone" />
+
+        <include
+            android:id="@+id/ilActive"
+            layout="@layout/cantata_layout_lrc_active"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/tvMusicName"
@@ -23,48 +33,33 @@
             android:gravity="center"
             android:textColor="@android:color/white"
             android:textSize="13sp"
-            tools:text="花海"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="花海" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvCoNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="128人合唱中"
+            android:layout_marginEnd="10dp"
             android:textColor="@color/white_80_percent"
             android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@id/tvMusicName"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="10dp"
             app:layout_constraintTop_toTopOf="@id/tvMusicName"
-            app:layout_constraintBottom_toBottomOf="@id/tvMusicName"/>
+            tools:text="128人合唱中" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvCumulativeScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="1523总分"
             android:layout_marginEnd="10dp"
             android:textColor="@color/white_80_percent"
             android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@id/tvMusicName"
             app:layout_constraintEnd_toStartOf="@id/tvCoNumber"
             app:layout_constraintTop_toTopOf="@id/tvMusicName"
-            app:layout_constraintBottom_toBottomOf="@id/tvMusicName"/>
-
-        <include
-            layout="@layout/cantata_layout_lrc_prepare"
-            android:visibility="visible" />
-
-        <include
-            android:id="@+id/ilActive"
-            layout="@layout/cantata_layout_lrc_active"
-            android:visibility="gone" />
-
-        <include
-            android:id="@+id/combo_view"
-            layout="@layout/cantata_layout_lrc_combo_view"
-            android:visibility="gone"
-            tools:visibility="visible" />
+            tools:text="1523总分" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include
